[gd_scene load_steps=36 format=3 uid="uid://c1s3nx4ocjyf3"]

[ext_resource type="Script" path="res://Scripts/game_stator.gd" id="1_bf8xn"]
[ext_resource type="PackedScene" uid="uid://dc2blau7i53dn" path="res://Scenes/ui_top_right.tscn" id="2_oouaa"]
[ext_resource type="PackedScene" uid="uid://bmn1gnoafwlpq" path="res://Scenes/ui_bottom_left.tscn" id="4_2r662"]
[ext_resource type="Script" path="res://Scripts/rain_particles.gd" id="5_0ojus"]
[ext_resource type="Script" path="res://Scripts/turn_based_combat.gd" id="5_3jbfr"]
[ext_resource type="Animation" uid="uid://br0usyspaohnt" path="res://Assets/walk.res" id="6_0jcgn"]
[ext_resource type="Texture2D" uid="uid://cwpke1hppuf5d" path="res://Assets/Enemy Sprites/player.png" id="7_ktkqq"]
[ext_resource type="PackedScene" uid="uid://xp5bk8kd1eda" path="res://Scenes/enemy.tscn" id="9_i3nuy"]
[ext_resource type="AudioStream" uid="uid://bhhy438o1232f" path="res://Assets/walk.wav" id="9_y0v4j"]
[ext_resource type="Resource" uid="uid://4pw6s6m6t8b5" path="res://Resources/box.tres" id="10_qiwu8"]
[ext_resource type="Texture2D" uid="uid://btol1iyvmw33f" path="res://Assets/droplet.png" id="10_us2a0"]
[ext_resource type="Script" path="res://Scripts/positionaire.gd" id="11_slijj"]
[ext_resource type="PackedScene" uid="uid://cxduwk6h7qcx7" path="res://Scenes/death_anim.tscn" id="12_3seak"]
[ext_resource type="Texture2D" uid="uid://0d1ck5a20tvd" path="res://Assets/campfire.png" id="12_dy8vm"]
[ext_resource type="Script" path="res://Scripts/weapons.gd" id="12_g1a84"]
[ext_resource type="Resource" uid="uid://dn2lelhadtdsg" path="res://Resources/knight.tres" id="12_g5l2b"]
[ext_resource type="Script" path="res://Scripts/campfire.gd" id="12_saw53"]
[ext_resource type="Resource" uid="uid://c7e1t6vkeumu0" path="res://Resources/crab.tres" id="13_4nc4i"]
[ext_resource type="Resource" uid="uid://b8svinhb84cpv" path="res://Resources/Weapons/dagger.tres" id="13_t8clx"]
[ext_resource type="PackedScene" uid="uid://bqywyile7kjou" path="res://Scenes/item.tscn" id="14_i0075"]
[ext_resource type="PackedScene" uid="uid://bic1gh3aox106" path="res://Scenes/stormorer.tscn" id="15_nyepa"]
[ext_resource type="Resource" uid="uid://dy3x5njgogqh7" path="res://Resources/Weapons/shield.tres" id="16_i5tk6"]
[ext_resource type="FontFile" uid="uid://b7yylpgbk15oi" path="res://Assets/pixel_font_3x4.ttf" id="16_wddr5"]
[ext_resource type="AudioStream" uid="uid://cvw1sfgoma3hj" path="res://Assets/hurt.wav" id="17_svmwv"]
[ext_resource type="Texture2D" uid="uid://cdjx7syckmlss" path="res://Assets/infobox-bg.png" id="18_mfgp6"]
[ext_resource type="AudioStream" uid="uid://co34n1qii77b0" path="res://Assets/mixkit-calm-thunderstorm-in-the-jungle-2415.wav" id="20_8iqwk"]
[ext_resource type="PackedScene" uid="uid://bfvas4ibxn6vm" path="res://Scenes/Effects/wet_effect.tscn" id="24_346cm"]
[ext_resource type="AudioStream" uid="uid://r4g6dbr70hmw" path="res://Assets/JDSherbert - Ambiences Music Pack - Frost Mountain Aura.ogg" id="28_yxxrc"]

[sub_resource type="Animation" id="Animation_6qsn5"]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(134, 148), Vector2(142, 148)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.296706, 0.0]
}

[sub_resource type="Animation" id="Animation_skmxu"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 2,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 2,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5u8v8"]
_data = {
"hurt": SubResource("Animation_6qsn5"),
"idle": SubResource("Animation_skmxu"),
"walk": ExtResource("6_0jcgn")
}

[sub_resource type="LabelSettings" id="LabelSettings_hds4j"]
font = ExtResource("16_wddr5")
font_color = Color(0.811765, 0.776471, 0.721569, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ulm21"]
font = ExtResource("16_wddr5")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_slqrj"]
texture = ExtResource("18_mfgp6")

[sub_resource type="LabelSettings" id="LabelSettings_4wr5s"]
font = ExtResource("16_wddr5")

[node name="GameStator" type="Node2D"]
script = ExtResource("1_bf8xn")

[node name="Positionaire" type="Node2D" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("11_slijj")
player = NodePath("../Player")

[node name="UI_TopRight" parent="." instance=ExtResource("2_oouaa")]

[node name="UI_BottomLeft" parent="." instance=ExtResource("4_2r662")]
visible = false

[node name="RainParticles" type="CPUParticles2D" parent="."]
position = Vector2(314, -70)
emitting = false
amount = 30
speed_scale = 1.2
texture = ExtResource("10_us2a0")
emission_shape = 3
emission_rect_extents = Vector2(300, 1)
direction = Vector2(-0.25, 1)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 500.0
initial_velocity_max = 500.0
scale_amount_min = 2.0
scale_amount_max = 2.0
anim_speed_min = 1.0
anim_speed_max = 1.0
script = ExtResource("5_0ojus")

[node name="Player" type="Node2D" parent="."]
position = Vector2(142, 148)

[node name="Sprite" type="Sprite2D" parent="Player"]
scale = Vector2(2, 2)
texture = ExtResource("7_ktkqq")
region_rect = Rect2(400, 0, 16, 16)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player/Sprite"]
speed_scale = 2.5
libraries = {
"": SubResource("AnimationLibrary_5u8v8")
}

[node name="Walkie" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource("9_y0v4j")
volume_db = -14.236
pitch_scale = 0.69

[node name="TBC" type="Node2D" parent="."]
position = Vector2(-356, -214)
script = ExtResource("5_3jbfr")
enemies = Array[Resource("res://Scripts/base_enemy.gd")]([ExtResource("10_qiwu8"), ExtResource("12_g5l2b"), ExtResource("13_4nc4i")])
death_animation = ExtResource("12_3seak")

[node name="Enemy" parent="TBC" node_paths=PackedStringArray("stator") instance=ExtResource("9_i3nuy")]
position = Vector2(638, 417)
stator = NodePath("../..")

[node name="Weapons" type="VBoxContainer" parent="TBC"]
custom_minimum_size = Vector2(210, 0)
offset_left = 357.0
offset_top = 383.0
offset_right = 567.0
offset_bottom = 587.0
theme_override_constants/separation = 4
script = ExtResource("12_g1a84")
weapons_data = Array[Resource("res://Scripts/base_weapon.gd")]([ExtResource("13_t8clx"), ExtResource("16_i5tk6"), null])

[node name="Item1" parent="TBC/Weapons" instance=ExtResource("14_i0075")]
layout_mode = 2

[node name="Item2" parent="TBC/Weapons" instance=ExtResource("14_i0075")]
layout_mode = 2

[node name="Item3" parent="TBC/Weapons" instance=ExtResource("14_i0075")]
layout_mode = 2

[node name="WeaponsLabel" type="Label" parent="TBC"]
offset_left = 356.0
offset_top = 380.0
offset_right = 454.0
offset_bottom = 403.0
text = "WEAPONS"
label_settings = SubResource("LabelSettings_hds4j")

[node name="TurnsLabel" type="Label" parent="TBC/WeaponsLabel"]
layout_mode = 0
offset_left = 266.0
offset_top = -34.0
offset_right = 322.0
offset_bottom = -11.0
text = "TURN: 1"
label_settings = SubResource("LabelSettings_ulm21")

[node name="GlobalOuchie" type="AudioStreamPlayer2D" parent="TBC"]
position = Vector2(356, 214)
stream = ExtResource("17_svmwv")
volume_db = -16.563

[node name="Campfire" type="Node2D" parent="."]
position = Vector2(-356, -214)
script = ExtResource("12_saw53")

[node name="Sprite" type="Sprite2D" parent="Campfire"]
position = Vector2(583, 349)
scale = Vector2(2, 2)
texture = ExtResource("12_dy8vm")
hframes = 2

[node name="HealButton" type="Button" parent="Campfire"]
offset_left = 599.0
offset_top = 366.0
offset_right = 697.0
offset_bottom = 406.0
theme_override_fonts/font = ExtResource("16_wddr5")
theme_override_styles/normal = SubResource("StyleBoxTexture_slqrj")
text = "
HEAL 5 HP"

[node name="HealButton2" type="Button" parent="Campfire"]
offset_left = 599.0
offset_top = 409.0
offset_right = 697.0
offset_bottom = 449.0
theme_override_fonts/font = ExtResource("16_wddr5")
theme_override_styles/normal = SubResource("StyleBoxTexture_slqrj")
text = "
MAX HP + 5"

[node name="Stormorer" parent="." node_paths=PackedStringArray("game_stator") instance=ExtResource("15_nyepa")]
game_stator = NodePath("..")

[node name="StormPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("20_8iqwk")
volume_db = -20.553

[node name="GameOver" type="Label" parent="."]
visible = false
offset_left = 2.0
offset_top = -9.0
offset_right = 146.0
offset_bottom = 48.0
text = "
GAME OVER
PRESS R TO RESTART"
label_settings = SubResource("LabelSettings_4wr5s")

[node name="WetLabel" type="Label" parent="."]
visible = false
offset_left = 73.0
offset_top = 58.0
offset_right = 281.0
offset_bottom = 115.0
text = "
WET
ALL SIDES TAKE 1.5X DAMAGE"
label_settings = SubResource("LabelSettings_4wr5s")
horizontal_alignment = 1

[node name="WetEffect" parent="." instance=ExtResource("24_346cm")]
visible = false
offset_left = 167.0
offset_top = 51.0
offset_right = 183.0
offset_bottom = 67.0
grow_horizontal = 1
grow_vertical = 1
script = null

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("28_yxxrc")
volume_db = -24.133
autoplay = true

[connection signal="animation_finished" from="Player/Sprite/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="shield_up" from="TBC/Weapons" to="." method="_on_weapons_shield_up"]
[connection signal="heal" from="Campfire" to="." method="_on_campfire_heal"]
[connection signal="button_down" from="Campfire/HealButton" to="Campfire" method="_on_heal_button_button_down"]
[connection signal="button_down" from="Campfire/HealButton2" to="." method="_on_heal_button_2_button_down"]
[connection signal="amplify" from="Stormorer" to="." method="_on_stormorer_amplify"]
[connection signal="shift_grounds" from="Stormorer" to="." method="_on_stormorer_shift_grounds"]
